[tool.black]
line-length = 79

[tool.poetry]
name = "uiscom-tester"
version = "0.1.0"
description = ""
authors = ["Maksim <mksmvnv@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
